client/src/index.css
/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */

/* Document
   ========================================================================== */

/**
 * 1. Correct the line height in all browsers.
 * 2. Prevent adjustments of font size after orientation changes in iOS.
 */

html {
  line-height: 1.15; /* 1 */
  -webkit-text-size-adjust: 100%; /* 2 */
}

/* Sections
   ========================================================================== */

/**
 * Remove the margin in all browsers.
 */

body {
  margin: 0;
}

/**
 * Correct the font size and margin on `h1` elements within `section` and
 * `article` contexts in Chrome, Firefox, and Safari.
 */

h1 {
  font-size: 2em;
  margin: 0.67em 0;
}

/* Grouping content
   ========================================================================== */

/**
 * 1. Add the correct box sizing in Firefox.
 * 2. Show the overflow in Edge and IE.
 */

hr {
  box-sizing: content-box; /* 1 */
  height: 0; /* 1 */
  overflow: visible; /* 2 */
}

/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */

pre {
  font-family: monospace, monospace; /* 1 */
  font-size: 1em; /* 2 */
}

/* Text-level semantics
   ========================================================================== */

/**
 * Remove the gray background on active links in IE 10.
 */

a {
  background-color: transparent;
}

/**
 * 1. Remove the bottom border in Chrome 57-
 * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
 */

abbr[title] {
  border-bottom: none; /* 1 */
  text-decoration: underline; /* 2 */
  text-decoration: underline dotted; /* 2 */
}

/**
 * Add the correct font weight in Chrome, Edge, and Safari.
 */

b,
strong {
  font-weight: bolder;
}

/**
 * 1. Correct the inheritance and scaling of font size in all browsers.
 * 2. Correct the odd `em` font sizing in all browsers.
 */

code,
kbd,
samp {
  font-family: monospace, monospace; /* 1 */
  font-size: 1em; /* 2 */
}

/**
 * Add the correct font size in all browsers.
 */

small {
  font-size: 80%;
}

/**
 * Prevent `sub` and `sup` elements from affecting the line height in
 * all browsers.
 */

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

/* Embedded content
   ========================================================================== */

/**
 * Remove the border on images inside links in IE 10.
 */

img {
  border-style: none;
}

/* Forms
   ========================================================================== */

/**
 * 1. Change the font styles in all browsers.
 * 2. Remove the margin in Firefox and Safari.
 */

button,
input,
optgroup,
select,
textarea {
  font-family: inherit; /* 1 */
  font-size: 100%; /* 1 */
  line-height: 1.15; /* 1 */
  margin: 0; /* 2 */
}

/**
 * Show the overflow in IE.
 * 1. Show the overflow in Edge.
 */

button,
input {
  /* 1 */
  overflow: visible;
}

/**
 * Remove the inheritance of text transform in Edge, Firefox, and IE.
 * 1. Remove the inheritance of text transform in Firefox.
 */

button,
select {
  /* 1 */
  text-transform: none;
}

/**
 * Correct the inability to style clickable types in iOS and Safari.
 */

button,
[type="button"],
[type="reset"],
[type="submit"] {
  -webkit-appearance: button;
}

/**
 * Remove the inner border and padding in Firefox.
 */

button::-moz-focus-inner,
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

/**
 * Restore the focus styles unset by the previous rule.
 */

button:-moz-focusring,
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring {
  outline: 1px dotted ButtonText;
}

/**
 * Correct the padding in Firefox.
 */

fieldset {
  padding: 0.35em 0.75em 0.625em;
}

/**
 * 1. Correct the text wrapping in Edge and IE.
 * 2. Correct the color inheritance from `fieldset` elements in IE.
 * 3. Remove the padding so developers are not caught out when they zero out
 *    `fieldset` elements in all browsers.
 */

legend {
  box-sizing: border-box; /* 1 */
  color: inherit; /* 2 */
  display: table; /* 1 */
  max-width: 100%; /* 1 */
  padding: 0; /* 3 */
  white-space: normal; /* 1 */
}

/**
 * Add the correct vertical alignment in Chrome, Firefox, and Opera.
 */

progress {
  vertical-align: baseline;
}

/**
 * Remove the default vertical scrollbar in IE 10+.
 */

textarea {
  overflow: auto;
}

/**
 * 1. Add the correct box sizing in IE 10.
 * 2. Remove the padding in IE 10.
 */

[type="checkbox"],
[type="radio"] {
  box-sizing: border-box; /* 1 */
  padding: 0; /* 2 */
}

/**
 * Correct the cursor style of increment and decrement buttons in Chrome.
 */

[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  height: auto;
}

/**
 * 1. Correct the odd appearance in Chrome and Safari.
 * 2. Correct the outline style in Safari.
 */

[type="search"] {
  -webkit-appearance: textfield; /* 1 */
  outline-offset: -2px; /* 2 */
}

/**
 * Remove the inner padding in Chrome and Safari on macOS.
 */

[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}

/**
 * 1. Correct the inability to style clickable types in iOS and Safari.
 * 2. Change font properties to `inherit` in Safari.
 */

::-webkit-file-upload-button {
  -webkit-appearance: button; /* 1 */
  font: inherit; /* 2 */
}

/* Interactive
   ========================================================================== */

/*
 * Add the correct display in Edge, IE 10+, and Firefox.
 */

details {
  display: block;
}

/*
 * Add the correct display in all browsers.
 */

summary {
  display: list-item;
}

/* Misc
   ========================================================================== */

/**
 * Add the correct display in IE 10+.
 */

template {
  display: none;
}

/**
 * Add the correct display in IE 10.
 */

[hidden] {
  display: none;
}
/* END Normalize.css */
@import url("https://fonts.googleapis.com/css?family=Arimo");

* {
  box-sizing: border-box;
}
:root {
  --gray-black: rgb(65, 65, 65);
  --gray-light: #666;
  --widget-links: rgb(247, 167, 20);
  --up: green;
  --down: red;
}
body {
  background-image: linear-gradient(
    to right,
    #000000,
    #0e0e0e,
    #171717,
    #1f1f1f,
    #272727
  );
  color: var(--gray-light);
  font-family: "Arimo", sans-serif;
  font-size: calc(12px + (18 - 12) * ((100vw - 300px) / (1600 - 300)));
}

/* div,
header,
footer,
nav,
h1,
h2 {
  border: 1px red solid;
} */
h1,
h2,
h3 {
  margin: 0px;
  color: var(--gray-black);
}

/* General Page Layout Settings */
/* .container {
  max-width: 968px;
  margin: auto;
  display: grid;
} */

/* General Widget Settings */
.widget {
  /* margin-left: 20px;
  margin-right: 20px; */
  background: white;
  padding: 20px;
  margin-bottom: 20px;
  /* border: 1px var(--gray-black) solid; */
}
.widget a:link,
.widget a:hover,
.widget a:visited {
  color: var(--widget-links);
  text-decoration: none;
}
.widget_content-area {
  display: grid;
}
.light-text {
  color: var(--gray-light);
}
.ticker {
  color: var(--down);
}

/* Company Details Component Settings */
.company-quick-view {
  display: grid;
  grid-template-columns: 1fr 1fr;
}
.company-quick-view_pricing h2 {
  font-size: 50px;
}
.company-quick-view_pricing {
  justify-content: end;
}
.green {
  color: green;
}
.red {
  color: red;
}
.key-value {
  display: grid;
  grid-template-columns: 1fr 1fr;
}
.widget > h1 {
  margin-bottom: 20px;
  color: #ff9b04;
}
.company-description {
  display: grid;
  grid-template-columns: auto 1fr;
  grid-gap: 20px;
}
.parameter-name {
  font-weight: 700;
}
.summary {
  margin-top: 0px;
  line-height: 1.5;
  margin-top: 10px;
}

@media only screen and (max-width: 768px) {
  .key-value {
    grid-template-columns: 1fr;
  }
}
.news-story-wrapper {
  margin-top: 20px;
  margin-bottom: 20px;
}
.datetime {
  font-size: calc(10px + (16 - 10) * ((100vw - 300px) / (1600 - 300)));
}
.key-value > div {
  display: grid;
  grid-template-columns: 1fr 1fr;
  border-top: 1px solid black;
  padding-top: 5px;
  padding-bottom: 5px;
}
.financial-data {
  justify-self: end;
}
header {
  display: grid;
  grid-template-columns: auto max-content;
  background-image: linear-gradient(
    to right,
    #000000,
    #0e0e0e,
    #171717,
    #1f1f1f,
    #272727
  );
}
.nav-list {
  height: 100%;
  margin: 0;
  list-style: none;
  padding-left: 0;
  display: grid;
  justify-content: end;
  align-items: center;
  grid-template-columns: max-content max-content max-content max-content;
}
.nav-list a:link,
.nav-list a:visited {
  color: #707070;
  text-decoration: none;
  font-weight: 700;
  letter-spacing: 0.25em;
}
.nav-list a:hover {
  color: white;
}
.nav-list a {
  height: 100%;
  padding: 10px;
  display: table-cell;
  vertical-align: middle;
}
.nav-list__item {
  padding: 0;
}
.nav-list > li:hover {
  color: white;
  background-image: linear-gradient(
    to bottom,
    #ff9b04,
    #ff7d3a,
    #ff5f61,
    #ff4b89,
    #fd49af
  );
}
.nav-list > li {
  display: table;
  height: 100%;
  font-size: calc(14px + (16 - 14) * ((100vw - 300px) / (1600 - 300)));
}
nav {
  display: grid;
  align-items: center;
}
.stripe {
  height: 10px;
  background-image: linear-gradient(
    to right,
    #ff9b04,
    #ff7d3a,
    #ff5f61,
    #ff4b89,
    #fd49af
  );
  box-shadow: 2px 2px 10px black;
  z-index: 10000;
}
tr:nth-child(even) {
  background: #ccc;
}
td {
  text-align: center;
}
table {
  border-collapse: collapse;
}
th,
td {
  padding: 0;
}
th {
  font-weight: 700;
}

